--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,20 @@
-# ===================================================================
-# --- Data Files ---
-# Ignore ALL files that end in .csv
+# Ignore all CSV files except the one needed for SHAP
 *.csv
+!shap_background_data.csv
 
-# Ignore any file that contains the text ", index=False"
-# This is a powerful way to catch our badly named file.
-*, index=False
-
-# ===================================================================
-# --- Python & System Files ---
+# Standard Python/System Ignores
 __pycache__/
 *.pyc
 .env
 .venv
 .ipynb_checkpoints/
-.vscode/
-.idea/
-.DS_Store
 
-# ===================================================================
-# --- Project-Specific Ignores ---
-# Ignore old or practice scripts.
-clinic_appointment_schedule.py
-lab_results_report.py
+# Old model files
+shap_explainer.pkl
+
+# Old practice scripts
+level_*.py
 patient_vitals*.py
-level_1*.py
-level_2*.py # A wildcard to catch ALL level_2 scripts
-
-# Temporarily ignore the app until Phase 2
-app.py
+clinic_appointment*.py
+lab_results*.py
+generate_data.py
